--- a/src/assets/styles/dish.scss
+++ b/src/assets/styles/dish.scss
@@ -2,4 +2,6 @@
     width: 100%;
     height: 250px;
     object-fit: cover;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
 }
